force-app/main/default/objects/os_Listing__c/fields/os_Commercial_Amenities__c.field-meta.xml
<CustomField>
    <fullName>os_Commercial_Amenities__c</fullName>
    <label>Commercial Amenities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>os_Listing_Initials__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>Acreage</fullName>
            </value>
            <value>
                <fullName>Availabe Networked</fullName>
            </value>
            <value>
                <fullName>Available Furnished</fullName>
            </value>
            <value>
                <fullName>Bar</fullName>
            </value>
            <value>
                <fullName>CCTV</fullName>
            </value>
            <value>
                <fullName>Conference Room</fullName>
            </value>
            <value>
                <fullName>Conservatory</fullName>
            </value>
            <value>
                <fullName>Covered Parking</fullName>
            </value>
            <value>
                <fullName>Dining in Building</fullName>
            </value>
            <value>
                <fullName>Fireplace</fullName>
            </value>
            <value>
                <fullName>garage</fullName>
            </value>
            <value>
                <fullName>Garden</fullName>
            </value>
            <value>
                <fullName>Georgian Architecture</fullName>
            </value>
            <value>
                <fullName>Golf Greens</fullName>
            </value>
            <value>
                <fullName>Grand Hall</fullName>
            </value>
            <value>
                <fullName>Grand Staircase</fullName>
            </value>
            <value>
                <fullName>High Ceilings</fullName>
            </value>
            <value>
                <fullName>Home Theatre</fullName>
            </value>
            <value>
                <fullName>Library</fullName>
            </value>
            <value>
                <fullName>Lift</fullName>
            </value>
            <value>
                <fullName>Listed Building</fullName>
            </value>
            <value>
                <fullName>Marble Finishings</fullName>
            </value>
            <value>
                <fullName>Massive Rooms</fullName>
            </value>
            <value>
                <fullName>Modern Finishings</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>Patio</fullName>
            </value>
            <value>
                <fullName>Retail in Building</fullName>
            </value>
            <value>
                <fullName>Shared Gym</fullName>
            </value>
            <value>
                <fullName>Shared Spa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>