force-app/main/default/objects/os_Listing__c/fields/os_Community_Propertybase__c.field-meta.xml
<CustomField>
    <fullName>os_Community_Propertybase__c</fullName>
    <label>Community Propertybase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Akoya (DAMAC Hills)</fullName>
            </value>
            <value>
                <fullName>Akoya Oxygen</fullName>
            </value>
            <value>
                <fullName>Al Barari</fullName>
            </value>
            <value>
                <fullName>Al Barsha</fullName>
            </value>
            <value>
                <fullName>Al Furjan</fullName>
            </value>
            <value>
                <fullName>Al Hamra Village</fullName>
            </value>
            <value>
                <fullName>Al Quoz</fullName>
            </value>
            <value>
                <fullName>Al Reem</fullName>
            </value>
            <value>
                <fullName>Al Sufouh</fullName>
            </value>
            <value>
                <fullName>Arabian Ranches</fullName>
            </value>
            <value>
                <fullName>Arjan</fullName>
            </value>
            <value>
                <fullName>Bluewaters</fullName>
            </value>
            <value>
                <fullName>Business Bay</fullName>
            </value>
            <value>
                <fullName>Culture Village</fullName>
            </value>
            <value>
                <fullName>Deira</fullName>
            </value>
            <value>
                <fullName>DIFC</fullName>
            </value>
            <value>
                <fullName>Discovery Gardens</fullName>
            </value>
            <value>
                <fullName>Downtown Dubai</fullName>
            </value>
            <value>
                <fullName>Downtown Jebel Ali</fullName>
            </value>
            <value>
                <fullName>Dubai Creek Harbour</fullName>
            </value>
            <value>
                <fullName>Dubai Festival City</fullName>
            </value>
            <value>
                <fullName>Dubai Harbour</fullName>
            </value>
            <value>
                <fullName>Dubai Healthcare City</fullName>
            </value>
            <value>
                <fullName>Dubai Hills Estate</fullName>
            </value>
            <value>
                <fullName>Dubai Industrial City</fullName>
            </value>
            <value>
                <fullName>Dubai Investment Park</fullName>
            </value>
            <value>
                <fullName>Dubailand</fullName>
            </value>
            <value>
                <fullName>Dubai Marina</fullName>
            </value>
            <value>
                <fullName>Dubai Media City</fullName>
            </value>
            <value>
                <fullName>Dubai Pearl</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>