force-app/main/default/objects/os_Listing__c/fields/os_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>os_Company_Name__c</fullName>
    <label>Company Name</label>
    <type>TextArea</type>
</CustomField>