force-app/main/default/objects/os_Listing__c/fields/os_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>os_Completion_Date__c</fullName>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>