force-app/main/default/objects/os_Listing__c/fields/os_Compliance_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>os_Compliance_Timestamp__c</fullName>
    <label>Compliance Timestamp</label>
    <type>DateTime</type>
</CustomField>