force-app/main/default/objects/os_Listing__c/fields/os_Construction_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>os_Construction_Completion_Date__c</fullName>
    <label>Construction Completion Date</label>
    <type>Date</type>
</CustomField>