force-app/main/default/objects/os_Listing__c/fields/os_Contact_Verified__c.field-meta.xml
<CustomField>
    <fullName>os_Contact_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Verified</label>
    <type>Checkbox</type>
</CustomField>