force-app/main/default/objects/os_Listing__c/fields/os_Content_Request_Form__c.field-meta.xml
<CustomField>
    <fullName>os_Content_Request_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Content Request Form</label>
    <type>Checkbox</type>
</CustomField>