force-app/main/default/objects/os_Listing__c/fields/os_Contingent__c.field-meta.xml
<CustomField>
    <fullName>os_Contingent__c</fullName>
    <label>Contingent</label>
    <type>Date</type>
</CustomField>