force-app/main/default/objects/os_Listing__c/fields/os_Contract__c.field-meta.xml
<CustomField>
    <fullName>os_Contract__c</fullName>
    <label>Contract</label>
    <type>Date</type>
</CustomField>