force-app/main/default/objects/os_Listing__c/fields/os_Contract_Expiry__c.field-meta.xml
<CustomField>
    <fullName>os_Contract_Expiry__c</fullName>
    <label>Contract Expiry</label>
    <type>Date</type>
</CustomField>