force-app/main/default/objects/os_Listing__c/fields/os_Coselling_Office_Name__c.field-meta.xml
<CustomField>
    <fullName>os_Coselling_Office_Name__c</fullName>
    <label>Coselling Office Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>