force-app/main/default/objects/os_Listing__c/fields/os_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>os_Country_Code__c</fullName>
    <label>Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>