force-app/main/default/objects/os_Listing__c/fields/os_Cross__c.field-meta.xml
<CustomField>
    <fullName>os_Cross__c</fullName>
    <label>Cross</label>
    <length>255</length>
    <type>Text</type>
</CustomField>