force-app/main/default/objects/os_Listing__c/fields/os_Current_Status_CC__c.field-meta.xml
<CustomField>
    <fullName>os_Current_Status_CC__c</fullName>
    <label>Current Status - CC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Listing Revived by CC</fullName>
            </value>
            <value>
                <fullName>Listing Live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>