force-app/main/default/objects/os_Listing__c/fields/os_Date_Time_Published__c.field-meta.xml
<CustomField>
    <fullName>os_Date_Time_Published__c</fullName>
    <label>Date/Time Published</label>
    <type>DateTime</type>
</CustomField>