force-app/main/default/objects/os_Listing__c/fields/os_DepartmentBucket__c.field-meta.xml
<CustomField>
    <fullName>os_DepartmentBucket__c</fullName>
    <label>Department (Bucket)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brokerage</fullName>
            </value>
            <value>
                <fullName>DIFC</fullName>
            </value>
            <value>
                <fullName>Offplan</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>