force-app/main/default/objects/os_Listing__c/fields/os_Deposit__c.field-meta.xml
<CustomField>
    <fullName>os_Deposit__c</fullName>
    <label>Deposit</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>