force-app/main/default/objects/os_Listing__c/fields/os_DescriptionArabic__c.field-meta.xml
<CustomField>
    <fullName>os_DescriptionArabic__c</fullName>
    <label>Description (Arabic)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>