force-app/main/default/objects/os_Listing__c/fields/os_Developer__c.field-meta.xml
<CustomField>
    <fullName>os_Developer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Developer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Lookup</relationshipName>
    <type>Lookup</type>
</CustomField>