force-app/main/default/objects/os_Listing__c/fields/os_Display_Address__c.field-meta.xml
<CustomField>
    <fullName>os_Display_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Address</label>
    <type>Checkbox</type>
</CustomField>