force-app/main/default/objects/os_Listing__c/fields/os_Disposal__c.field-meta.xml
<CustomField>
    <fullName>os_Disposal__c</fullName>
    <label>Disposal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>By Auction</fullName>
            </value>
            <value>
                <fullName>Confidential</fullName>
            </value>
            <value>
                <fullName>By Tender</fullName>
            </value>
            <value>
                <fullName>Offers Invited</fullName>
            </value>
            <value>
                <fullName>Private Treaty</fullName>
            </value>
            <value>
                <fullName>Shared Ownership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>