force-app/main/default/objects/os_Listing__c/fields/os_Dock__c.field-meta.xml
<CustomField>
    <fullName>os_Dock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dock</label>
    <type>Checkbox</type>
</CustomField>