force-app/main/default/objects/os_Listing__c/fields/os_Documents_Verified__c.field-meta.xml
<CustomField>
    <fullName>os_Documents_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documents Verified</label>
    <type>Checkbox</type>
</CustomField>