force-app/main/default/objects/os_Listing__c/fields/os_DTCM_Permit_Number__c.field-meta.xml
<CustomField>
    <fullName>os_DTCM_Permit_Number__c</fullName>
    <label>DTCM Permit Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>