force-app/main/default/objects/os_Listing__c/fields/os_Dubizzle_Region__c.field-meta.xml
<CustomField>
    <fullName>os_Dubizzle_Region__c</fullName>
    <label>Dubizzle Region</label>
    <type>TextArea</type>
</CustomField>