force-app/main/default/objects/os_Listing__c/fields/os_Epc_Image_Url__c.field-meta.xml
<CustomField>
    <fullName>os_Epc_Image_Url__c</fullName>
    <label>Epc Image Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>