force-app/main/default/objects/os_Listing__c/fields/os_Estimated_Listing_Revenue__c.field-meta.xml
<CustomField>
    <fullName>os_Estimated_Listing_Revenue__c</fullName>
    <formula>IF(RecordType.Name = &quot;Sale&quot;,  os_Listing_Price_pb__c * 0.02, os_Listing_Price_pb__c * 0.05)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Listing Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>