force-app/main/default/objects/os_Listing__c/fields/os_Estimated_On_Market_Date__c.field-meta.xml
<CustomField>
    <fullName>os_Estimated_On_Market_Date__c</fullName>
    <label>Estimated On Market Date</label>
    <type>Date</type>
</CustomField>