force-app/main/default/objects/os_Listing__c/fields/os_Exclusive__c.field-meta.xml
<CustomField>
    <fullName>os_Exclusive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclusive</label>
    <type>Checkbox</type>
</CustomField>