force-app/main/default/objects/os_Listing__c/fields/os_Exclusive_Listing_Date__c.field-meta.xml
<CustomField>
    <fullName>os_Exclusive_Listing_Date__c</fullName>
    <label>Exclusive Listing Date</label>
    <type>DateTime</type>
</CustomField>