force-app/main/default/objects/os_Listing__c/fields/os_External_ListingC__c.field-meta.xml
<CustomField>
    <fullName>os_External_ListingC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External Listing (C)</label>
    <type>Checkbox</type>
</CustomField>