force-app/main/default/objects/os_Listing__c/fields/os_EXTERNAREFID__c.field-meta.xml
<CustomField>
    <fullName>os_EXTERNAREFID__c</fullName>
    <label>EXTERNAREFID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>