force-app/main/default/objects/os_Listing__c/fields/os_Feature_2__c.field-meta.xml
<CustomField>
    <fullName>os_Feature_2__c</fullName>
    <label>Feature 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>