force-app/main/default/objects/os_Listing__c/fields/os_Features__c.field-meta.xml
<CustomField>
    <fullName>os_Features__c</fullName>
    <label>Features</label>
    <length>255</length>
    <type>Text</type>
</CustomField>