force-app/main/default/objects/os_Listing__c/fields/os_Fee_Starting_Date__c.field-meta.xml
<CustomField>
    <fullName>os_Fee_Starting_Date__c</fullName>
    <label>Fee Starting Date</label>
    <type>Date</type>
</CustomField>