force-app/main/default/objects/os_Listing__c/fields/os_Floor__c.field-meta.xml
<CustomField>
    <fullName>os_Floor__c</fullName>
    <label>Floor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>