force-app/main/default/objects/os_Listing__c/fields/os_Floor_Image__c.field-meta.xml
<CustomField>
    <fullName>os_Floor_Image__c</fullName>
    <label>Floor Image</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>