force-app/main/default/objects/os_Listing__c/fields/os_Form_A_expiry__c.field-meta.xml
<CustomField>
    <fullName>os_Form_A_expiry__c</fullName>
    <label>Form A expiry</label>
    <type>DateTime</type>
</CustomField>