force-app/main/default/objects/os_Listing__c/fields/os_Form_A_Notification_to_Sellers__c.field-meta.xml
<CustomField>
    <fullName>os_Form_A_Notification_to_Sellers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Form A Notification to Sellers</label>
    <type>Checkbox</type>
</CustomField>