force-app/main/default/objects/os_Listing__c/fields/os_Form_A_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>os_Form_A_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Form A Uploaded?</label>
    <type>Checkbox</type>
</CustomField>