force-app/main/default/objects/os_Listing__c/fields/os_Form_ASales_Leasing_form_or_NOC__c.field-meta.xml
<CustomField>
    <fullName>os_Form_ASales_Leasing_form_or_NOC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Form A, Sales/Leasing form or NOC</label>
    <type>Checkbox</type>
</CustomField>