force-app/main/default/objects/os_Listing__c/fields/os_Furnished_pb__c.field-meta.xml
<CustomField>
    <fullName>os_Furnished_pb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Furnished</label>
    <type>Checkbox</type>
</CustomField>