force-app/main/default/objects/os_Listing__c/fields/os_Grade_School__c.field-meta.xml
<CustomField>
    <fullName>os_Grade_School__c</fullName>
    <label>Grade School</label>
    <length>255</length>
    <type>Text</type>
</CustomField>