force-app/main/default/objects/os_Listing__c/fields/os_gsir_Listing_Category__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_Listing_Category__c</fullName>
    <label>Listing Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>