force-app/main/default/objects/os_Listing__c/fields/os_gsir_Mandate__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_Mandate__c</fullName>
    <label>Mandate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exclusive</fullName>
            </value>
            <value>
                <fullName>Non Exclusive</fullName>
            </value>
            <value>
                <fullName>Joint Sole</fullName>
            </value>
            <value>
                <fullName>Sole</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>