force-app/main/default/objects/os_Listing__c/fields/os_Hide__c.field-meta.xml
<CustomField>
    <fullName>os_Hide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide</label>
    <type>Checkbox</type>
</CustomField>