force-app/main/default/objects/os_Listing__c/fields/os_Hide_From_Website__c.field-meta.xml
<CustomField>
    <fullName>os_Hide_From_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide From Website</label>
    <type>Checkbox</type>
</CustomField>