force-app/main/default/objects/os_Listing__c/fields/os_High_School__c.field-meta.xml
<CustomField>
    <fullName>os_High_School__c</fullName>
    <label>High School</label>
    <length>255</length>
    <type>Text</type>
</CustomField>