force-app/main/default/objects/os_Listing__c/fields/os_Historical__c.field-meta.xml
<CustomField>
    <fullName>os_Historical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Historical</label>
    <type>Checkbox</type>
</CustomField>