force-app/main/default/objects/os_Listing__c/fields/os_HOA_Fees__c.field-meta.xml
<CustomField>
    <fullName>os_HOA_Fees__c</fullName>
    <label>HOA Fees</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>