force-app/main/default/objects/os_Listing__c/fields/os_House_Building_Name__c.field-meta.xml
<CustomField>
    <fullName>os_House_Building_Name__c</fullName>
    <label>House / Building Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>