force-app/main/default/objects/os_Listing__c/fields/os_Inter_office_Selling_Fee__c.field-meta.xml
<CustomField>
    <fullName>os_Inter_office_Selling_Fee__c</fullName>
    <label>Inter-office Selling Fee</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>