force-app/main/default/objects/os_Listing__c/fields/os_Is_Listing_Inquiry_Recipient_Login__c.field-meta.xml
<CustomField>
    <fullName>os_Is_Listing_Inquiry_Recipient_Login__c</fullName>
    <formula>IF(  Listing_Inquiry_Recipient__c = $User.Id , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Listing Inquiry Recipient Login?</label>
    <type>Checkbox</type>
</CustomField>