force-app/main/default/objects/os_Listing__c/fields/os_Is_Listing_price_changed__c.field-meta.xml
<CustomField>
    <fullName>os_Is_Listing_price_changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Listing price changed</label>
    <type>Checkbox</type>
</CustomField>