force-app/main/default/objects/os_Listing__c/fields/os_Is_MLS_Listing__c.field-meta.xml
<CustomField>
    <fullName>os_Is_MLS_Listing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is MLS Listing</label>
    <type>Checkbox</type>
</CustomField>