force-app/main/default/objects/os_Listing__c/fields/os_Is_Primary_Agent__c.field-meta.xml
<CustomField>
    <fullName>os_Is_Primary_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary Agent</label>
    <type>Checkbox</type>
</CustomField>