force-app/main/default/objects/os_Listing__c/fields/os_Keys__c.field-meta.xml
<CustomField>
    <fullName>os_Keys__c</fullName>
    <label>Keys</label>
    <type>TextArea</type>
</CustomField>