force-app/main/default/objects/os_Listing__c/fields/os_Land_Registry_Check_Verified__c.field-meta.xml
<CustomField>
    <fullName>os_Land_Registry_Check_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Land Registry Check Verified</label>
    <type>Checkbox</type>
</CustomField>