force-app/main/default/objects/os_Listing__c/fields/os_Last_Price_Changed_By__c.field-meta.xml
<CustomField>
    <fullName>os_Last_Price_Changed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Price Changed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lookup</relationshipName>
    <type>Lookup</type>
</CustomField>