force-app/main/default/objects/os_Listing__c/fields/os_LastPriceChangedOn__c.field-meta.xml
<CustomField>
    <fullName>os_LastPriceChangedOn__c</fullName>
    <label>LastPriceChangedOn</label>
    <type>DateTime</type>
</CustomField>