force-app/main/default/objects/os_Listing__c/fields/os_List_Office_MLS_ID__c.field-meta.xml
<CustomField>
    <fullName>os_List_Office_MLS_ID__c</fullName>
    <label>List Office MLS ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>