force-app/main/default/objects/os_Listing__c/fields/os_Listed_Date__c.field-meta.xml
<CustomField>
    <fullName>os_Listed_Date__c</fullName>
    <label>Listed Date</label>
    <type>Date</type>
</CustomField>