force-app/main/default/objects/os_Listing__c/fields/os_Listing_Address__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Address__c</fullName>
    <formula>IF(ISBLANK( os_Unit_Number__c ),&quot;&quot;,os_Unit_Number__c )
&amp; IF(ISBLANK(os_Unit_Number__c ),&quot;&quot;,&quot;, &quot;)
&amp; IF(ISBLANK( os_uaefields_Community_Propertyfinder__c ),&quot;&quot;,os_uaefields_Community_Propertyfinder__c )
&amp; IF(ISBLANK(os_uaefields_Community_Propertyfinder__c ),&quot;&quot;,&quot;, &quot;)
&amp; IF(ISBLANK( os_uaefields_Sub_CommunityPropertyfinder__c ),&quot;&quot;,os_uaefields_Sub_CommunityPropertyfinder__c )
&amp; IF(ISBLANK(os_uaefields_Sub_CommunityPropertyfinder__c ),&quot;&quot;,&quot;, &quot;)
&amp; IF(ISBLANK( os_uaefields_Property_Propertyfinder__c ),&quot;&quot;,os_uaefields_Property_Propertyfinder__c )
&amp; IF(ISBLANK(os_uaefields_Property_Propertyfinder__c ),&quot;&quot;,&quot;, &quot;)
&amp; IF(ISBLANK( os_Country__c ),&quot;&quot;,os_Country__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Address</label>
    <type>Text</type>
</CustomField>