force-app/main/default/objects/os_Listing__c/fields/os_Listing_Agent__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Listing Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Listings (Listing Agent)</relationshipLabel>
    <relationshipName>Listings</relationshipName>
    <type>Lookup</type>
</CustomField>