force-app/main/default/objects/os_Listing__c/fields/os_Listing_Agent_Country__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Agent_Country__c</fullName>
    <label>Listing Agent Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Listing_Agent_Country</valueSetName>
    </valueSet>
</CustomField>