force-app/main/default/objects/os_Listing__c/fields/os_Listing_Agent_Email__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Agent_Email__c</fullName>
    <label>Listing Agent Email</label>
    <type>Email</type>
</CustomField>