force-app/main/default/objects/os_Listing__c/fields/os_Listing_Agent_Fax__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Agent_Fax__c</fullName>
    <label>Listing Agent Fax</label>
    <type>Phone</type>
</CustomField>