force-app/main/default/objects/os_Listing__c/fields/os_Listing_Agent_Info__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Agent_Info__c</fullName>
    <label>Listing Agent Info</label>
    <type>TextArea</type>
</CustomField>