force-app/main/default/objects/os_Listing__c/fields/os_Listing_Agent_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Agent_Mobile_Phone__c</fullName>
    <label>Listing Agent Mobile Phone</label>
    <type>Phone</type>
</CustomField>