force-app/main/default/objects/os_Listing__c/fields/os_Listing_Agent_Salutation__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Agent_Salutation__c</fullName>
    <label>Listing Agent Salutation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>