force-app/main/default/objects/os_Listing__c/fields/os_Listing_Buyer_AML_Count__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Buyer_AML_Count__c</fullName>
    <label>Listing Buyer AML Count</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>