force-app/main/default/objects/os_Listing__c/fields/os_Listing_Compliance__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Compliance__c</fullName>
    <label>Listing Compliance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Document Missing</fullName>
            </value>
            <value>
                <fullName>Form A Falsified during Renewal</fullName>
            </value>
            <value>
                <fullName>Form Expired</fullName>
            </value>
            <value>
                <fullName>Signature Mis-Match</fullName>
            </value>
            <value>
                <fullName>Non Focus Area</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>