force-app/main/default/objects/os_Listing__c/fields/os_Listing_Content_Form_Submit__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Content_Form_Submit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Listing Content Form Submit</label>
    <type>Checkbox</type>
</CustomField>